--- a/Equals4/Equals4.csproj
+++ b/Equals4/Equals4.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <Description>This package/repository is a fork of Equals.Fody to stick with Fody 4 which still supports MSBuild 15.</Description>
     <TargetFrameworks>net452;netstandard1.0</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
     <Authors>Rafał Jasica, Simon Cropp</Authors>
     <NoWarn>CS1591</NoWarn>
     <PackageOutputPath>$(SolutionDir)nugets</PackageOutputPath>
     <PackageIconUrl>https://raw.githubusercontent.com/Fody/Equals/master/package_icon.png</PackageIconUrl>
-    <PackageProjectUrl>http://github.com/Fody/Equals</PackageProjectUrl>
+    <PackageProjectUrl>http://github.com/planetarium/Equals4.Foldy</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
